# sciwizard

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: contributing.md  installation.md
sciwizard/: __main__.py  app.py  config.py
sciwizard/core/: data_manager.py  experiment_tracker.py  model_registry.py  model_trainer.py  plugin_loader.py
sciwizard/ui/: main_window.py  workers.py
sciwizard/ui/panels/: automl_panel.py  data_panel.py  eval_panel.py  experiments_panel.py  hyperparam_panel.py  prediction_panel.py  preprocessing_panel.py  registry_panel.py  training_panel.py  viz_panel.py
sciwizard/ui/widgets/: common.py  plot_canvas.py
sciwizard/utils/: io.py  metrics.py
tests/: test_data_manager.py  test_model_registry.py  test_model_trainer.py  test_utils.py
