[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciwizard"
version = "1.0.0"
description = "A world-class machine learning GUI built with PySide6 and scikit-learn"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "SciWizard Contributors" }]
keywords = ["machine-learning", "gui", "scikit-learn", "PySide6", "AutoML"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: X11 Applications :: Qt",
]
dependencies = [
    "PySide6>=6.6.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
sciwizard = "sciwizard.app:main"

[project.urls]
Homepage = "https://github.com/pro-grammer-SD/sciwizard"
Repository = "https://github.com/pro-grammer-SD/sciwizard"
"Bug Tracker" = "https://github.com/pro-grammer-SD/sciwizard/issues"
Documentation = "https://sciwizard.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["sciwizard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
